@@ -25,6 +25,7 @@ VERSION 2.4-Beta 1
       to music provided by a running local Playdar service.
 
   CHANGES:
+    * Added tray icon context-menu action to open the preferences dialog.
     * Show a progress bar while loading pages in the Wikipedia applet.
     * Added option to right-align "year" in the albums applet.
     * Improved alignment of tracks in the albums applet.
